keycloak-instance/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    javaoperatorsdk.io/previous: 48cbb745-d90d-43a6-9bce-7e62c1e72102
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    route.openshift.io/termination: passthrough
  creationTimestamp: "2025-02-11T10:58:18Z"
  labels:
    app: keycloak
    app.kubernetes.io/instance: example-kc
    app.kubernetes.io/managed-by: keycloak-operator
  name: example-kc-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: example-kc-service
      port:
        name: https
  rules:
  - host: keycloak.local.amazinglyabstract.it
    http:
      paths:
      - backend:
          service:
            name: example-kc-service
            port:
              name: https
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - keycloak.local.amazinglyabstract.it
    secretName: local-cluster-tls
status:
  loadBalancer:
    ingress:
    - hostname: localhost
